--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -27,15 +27,18 @@ empty =
 space = $(empty) $(empty)
 
 CXX					= @CXX@
-CXXFLAGS			= @CXXFLAGS@ \
+CXXFLAGS			= @BOOST_CPPFLAGS@ \
+					  @CXXFLAGS@ \
 					  @CPPFLAGS@ \
 					  @PTHREAD_CFLAGS@ \
 					  @CIFPP_CFLAGS@
-LDFLAGS				= @LDFLAGS@ \
+LDFLAGS				= @BOOST_LDFLAGS@ \
+					  @LDFLAGS@ \
 					  @PTHREAD_CFLAGS@
-LIBS				= @CIFPP_LIBS@ \
-					  @BOOST_IOSTREAMS_LIB@ \
+LIBS				= @PTHREAD_LIBS@ \
+					  @CIFPP_LIBS@ \
 					  @BOOST_PROGRAM_OPTIONS_LIB@ \
+					  @BOOST_IOSTREAMS_LIB@ \
 					  @BOOST_DATE_TIME_LIB@ \
 					  @BOOST_REGEX_LIB@ \
 					  @LIBS@
@@ -127,6 +130,10 @@ endif
 ifneq "$(USE_RSRC)" "0"
 
 OBJECTS += $(PROGRAM)_rsrc.o
+
+# dictionaries may be found compressed
+%.dic: %.dic.gz
+	gunzip -c $^ > $@
 
 $(OBJDIR)/$(PROGRAM)_rsrc.o: $(RESOURCES)
 	$(MRC) -o $@ $^
