--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -120,7 +120,7 @@ else
 src/revision.hpp:
 	@ echo 'const char kRevision[] = R"(' > $@
 	@ echo $(PROGRAM)-version: $(VERSION) >> $@
-	@ echo Date:   $$(date --iso-8601) >> $@
+	@ echo Date:   $$(TZ=GMT date +"%Y-%m-%d") >> $@
 	@ echo ')";' >> $@
 
 endif
