cmake file, working on Windows

--- a/msvc/mkdssp.vcxproj.filters
+++ b/msvc/mkdssp.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\mkdssp_rsrc.obj">
+      <Filter>Source Files</Filter>
+    </Object>
+  </ItemGroup>
 </Project>
