--- a/msvc/mkdssp.vcxproj
+++ b/msvc/mkdssp.vcxproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <ClCompile Include="..\src\mkdssp.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\mkdssp_rsrc.obj" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
