--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,80 +1,141 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
 # set the project name
-project(mkdssp VERSION 4.0.0)
+project(mkdssp VERSION 4.0.0 LANGUAGES CXX)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+enable_testing()
+
+include(GNUInstallDirs)
+include(CheckFunctionExists)
+include(CheckIncludeFiles)
+include(CheckLibraryExists)
+include(CMakePackageConfigHelpers)
+include(Dart)
+include(GenerateExportHeader)
+
+set(CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Set bindir, if not use -DBIN_INSTALL_DIR
-if(NOT BIN_INSTALL_DIR)
-  if(CMAKE_INSTALL_BINDIR)
-    set(BIN_INSTALL_DIR ${CMAKE_INSTALL_BINDIR})
-  else(CMAKE_INSTALL_BINDIR)
-    set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
-  endif(CMAKE_INSTALL_BINDIR)
-endif(NOT BIN_INSTALL_DIR)
+if(CMAKE_COMPILER_IS_GNUCC)
+    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter")
+endif()
+if(MSVC)
+    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W4")
+endif()
 
-# Set libdir, if not use -DLIB_INSTALL_DIR
-if(NOT LIB_INSTALL_DIR)
-  if(CMAKE_INSTALL_LIBDIR)
-    set(LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
-  else(CMAKE_INSTALL_LIBDIR)
-    set(LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")
-  endif(CMAKE_INSTALL_LIBDIR)
-endif(NOT LIB_INSTALL_DIR)
+if(MSVC)
+    # make msvc standards compliant...
+    add_compile_options(/permissive-)
 
-# Set includedir, if not use -DINCLUDE_INSTALL_DIR
-if(NOT INCLUDE_INSTALL_DIR)
-  if(CMAKE_INSTALL_INCLUDEDIR)
-    set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})
-  else(CMAKE_INSTALL_INCLUDEDIR)
-    set(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/include")
-  endif(CMAKE_INSTALL_INCLUDEDIR)
-endif(NOT INCLUDE_INSTALL_DIR)
+	macro(get_WIN32_WINNT version)
+		if (WIN32 AND CMAKE_SYSTEM_VERSION)
+			set(ver ${CMAKE_SYSTEM_VERSION})
+			string(REPLACE "." "" ver ${ver})
+			string(REGEX REPLACE "([0-9])" "0\\1" ver ${ver})
 
-# Set sharedir, if not use -DSHARE_INSTALL_DIR
-if(NOT SHARE_INSTALL_DIR)
-  if(CMAKE_INSTALL_DATADIR)
-    set(SHARE_INSTALL_DIR "${CMAKE_INSTALL_DATADIR}")
-  else(CMAKE_INSTALL_DATADIR)
-    set(SHARE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share")
-  endif(CMAKE_INSTALL_DATADIR)
-endif(NOT SHARE_INSTALL_DIR)
+			set(${version} "0x${ver}")
+		endif()
+	endmacro()
 
-set (Boost_DETAILED_FAILURE_MSG ON)
-# set (BOOST_ROOT ${PROJECT_SOURCE_DIR}/../boost_1_75_0)
-# set (Boost_COMPILER "-vc")
-# set (Boost_USE_STATIC_RUNTIME ON)  
+	get_WIN32_WINNT(ver)
+	add_definitions(-D_WIN32_WINNT=${ver})
 
-find_package(Boost 1.73.0 REQUIRED COMPONENTS system iostreams regex date_time program_options)
+	# On Windows, do not install in the system location by default
+	if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+		message(WARNING "The library and auxiliary files will be installed in $ENV{LOCALAPPDATA}/${PROJECT_NAME}")
+		set(CMAKE_INSTALL_PREFIX "$ENV{LOCALAPPDATA}/${PROJECT_NAME}" CACHE PATH "..." FORCE)
+	endif()
 
-find_package(cifpp 1.0 REQUIRED)
+	# Find out the processor type for the target
+	if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
+		set(COFF_TYPE "x64")
+	elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386")
+		set(COFF_TYPE "x86")
+	elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "ARM64")
+		set(COFF_TYPE "arm64")
+	else()
+		message(FATAL_ERROR "Unsupported or unknown processor type ${CMAKE_SYSTEM_PROCESSOR}")
+	endif()	
+
+	set(COFF_SPEC "--coff=${COFF_TYPE}")
+endif()
+
+# Create a revision file, containing the current git version info
+
+find_package(Git)
+if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
+	include(GetGitRevisionDescription)
+    get_git_head_revision(REFSPEC COMMITHASH)
+
+	# Generate our own version string
+	git_describe_working_tree(BUILD_VERSION_STRING --match=build --dirty)
+else()
+    message(WARNING "Git not found, cannot set version info")
+
+    SET(BUILD_VERSION_STRING "unknown")
+endif()
+
+# generate version.h
+include_directories(${CMAKE_BINARY_DIR} PRIVATE)
+string(TIMESTAMP BUILD_DATE_TIME "%Y-%m-%d" UTC)
+configure_file("${CMAKE_SOURCE_DIR}/src/revision.hpp.in" "${CMAKE_BINARY_DIR}/revision.hpp" @ONLY)
+
+# Optionally use mrc to create resources
+find_program(MRC mrc HINTS "$ENV{LOCALAPPDATA}/mrc" "${CMAKE_INSTALL_PREFIX}/../mrc" "/usr/local/bin")
+
+if(MRC)
+	option(USE_RSRC "Use mrc to create resources" ON)
+else()
+	message(WARNING "Not using resources since mrc was not found")
+endif()
+
+if(USE_RSRC STREQUAL "ON")
+	set(USE_RSRC 1)
+
+	message("Using resources compiled with ${MRC}")
+	add_compile_definitions(USE_RSRC)
+endif()
 
 set(CMAKE_THREAD_PREFER_PTHREAD)
 set(THREADS_PREFER_PTHREAD_FLAG)
-find_package(Threads)
+find_package(Threads REQUIRED)
+
+set (Boost_DETAILED_FAILURE_MSG ON)
+find_package(Boost 1.71.0 REQUIRED COMPONENTS program_options system iostreams regex date_time)
+# extra diagnostic -- helpful for problem with FindBoost.cmake
+message(STATUS "Boost headers in: ${Boost_INCLUDE_DIR}")
+message(STATUS "Boost libraries in: ${Boost_LIBRARY_DIRS}")
+
+find_package(ZLIB)
+find_package(BZip2)
+find_package(cifpp 1.0 REQUIRED)
+
+if(USE_RSRC)
+	add_compile_definitions("DATA_DIR=\"${CIFPP_SHARE_DIR}\"")
+endif()
+
+include_directories(${Boost_INCLUDE_DIR} cifpp::cifpp ${CMAKE_SOURCE_DIR}/include)
+link_libraries(${Boost_LIBRARIES} cifpp::cifpp ${CMAKE_THREAD_LIBS_INIT})
+
+if (ZLIB_FOUND)
+	link_libraries(ZLIB::ZLIB)
+endif()
+
+if (BZIP2_FOUND)
+	link_libraries(BZip2::BZip2)
+endif()
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/src
 	PUBLIC ${cifpp_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
 )
 
-add_executable(mkdssp ${PROJECT_SOURCE_DIR}/src/mkdssp.cpp)
+add_executable(mkdssp
+	${PROJECT_SOURCE_DIR}/src/mkdssp.cpp)
 
 install(TARGETS ${PROJECT_NAME}
     RUNTIME DESTINATION ${BIN_INSTALL_DIR}
 )
-
-target_link_libraries(${PROJECT_NAME} CifPP::cifpp ${Boost_LIBRARIES} Threads::Threads)
-
-if(MSVC)
-    # make msvc standards compliant...
-    target_compile_options(${PROJECT_NAME} PRIVATE /permissive-)
-else()
-	find_library(Z z)
-	find_library(BZ2 bz2)
-
-	target_link_libraries(${PROJECT_NAME} ${Z} ${BZ2})
-endif()
-
