Search $HOME/.local for modules if applicable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,9 @@ if(UNIX AND NOT APPLE)
 	if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 		message(WARNING "The library and auxiliary files will be installed in $ENV{HOME}/.local")
 		set(CMAKE_INSTALL_PREFIX "$ENV{HOME}/.local" CACHE PATH "..." FORCE)
+
+		# libcifpp will be there as well, likely
+		list(PREPEND CMAKE_MODULE_PATH "$ENV{HOME}/.local")
 	endif()
 endif()
 
