update for meta project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,19 +103,7 @@ set(CMAKE_THREAD_PREFER_PTHREAD)
 set(THREADS_PREFER_PTHREAD_FLAG)
 find_package(Threads)
 
-find_package(gxrio QUIET)
-if(NOT gxrio_FOUND)
-	add_git_submodule(gxrio EXCLUDE_FROM_ALL)
-endif()
-
-find_package(libconfig QUIET)
-if(NOT libconfig_FOUND)
-	add_git_submodule(libconfig EXCLUDE_FROM_ALL)
-endif()
-
 find_package(cifpp 5.0.0 REQUIRED)
-
-add_git_submodule(date EXCLUDE_FROM_ALL)
 
 # The DSSP code is in a separate library, optionally to be used by others
 add_library(dssp_library OBJECT ${PROJECT_SOURCE_DIR}/src/DSSP.cpp)
@@ -156,27 +144,27 @@ if(ENABLE_TESTING)
 	# We still depend on boost for the testing headers-only library
 	find_package(Boost REQUIRED)
 
-	add_executable(dssp-unit-test ${PROJECT_SOURCE_DIR}/test/dssp-unit-test.cpp ${PROJECT_SOURCE_DIR}/src/dssp_wrapper.cpp)
+	add_executable(unit-test-dssp ${PROJECT_SOURCE_DIR}/test/unit-test-dssp.cpp ${PROJECT_SOURCE_DIR}/src/dssp_wrapper.cpp)
 
 	if(USE_RSRC)
-		mrc_target_resources(dssp-unit-test ${CIFPP_SHARE_DIR}/mmcif_pdbx.dic)
+		mrc_target_resources(unit-test-dssp ${CIFPP_SHARE_DIR}/mmcif_pdbx.dic)
 	endif()
 
-	target_include_directories(dssp-unit-test PRIVATE
+	target_include_directories(unit-test-dssp PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR}/src
 		${CMAKE_CURRENT_SOURCE_DIR}/include
 	)
 
-	target_link_libraries(dssp-unit-test dssp_library cifpp::cifpp date::date Boost::boost)
+	target_link_libraries(unit-test-dssp dssp_library cifpp::cifpp date::date Boost::boost)
 
 	if(MSVC)
 		# Specify unwind semantics so that MSVC knowns how to handle exceptions
-		target_compile_options(dssp-unit-test PRIVATE /EHsc)
+		target_compile_options(unit-test-dssp PRIVATE /EHsc)
 	endif()
 
 	enable_testing()
 
-	add_test(NAME dssp-unit-test COMMAND $<TARGET_FILE:dssp-unit-test> -- ${PROJECT_SOURCE_DIR}/test)
+	add_test(NAME unit-test-dssp COMMAND $<TARGET_FILE:unit-test-dssp> -- ${PROJECT_SOURCE_DIR}/test)
 endif()
 
 option(DSSP_BUILD_INSTALLER "Build an installer" OFF)
